[gd_scene load_steps=5 format=2]

[ext_resource path="res://GameDVDCardtridge/Tebenge/SpareParts/MenuLagrange.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameDVDCardtridge/Tebenge/SpareParts/GameplayLagrange.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameDVDCardtridge/Tebenge/SpareParts/UIField.gd" type="Script" id=3]
[ext_resource path="res://GameDVDCardtridge/Tebenge/Assets/theme/TebengeFancyTheme.tres" type="Theme" id=4]

[node name="UIField" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 3 )

[node name="MenuLagrange" parent="." instance=ExtResource( 1 )]

[node name="GameplayLagrange" parent="." instance=ExtResource( 2 )]
visible = false

[connection signal="LagrangeWantsTo" from="MenuLagrange" to="." method="_on_MenuLagrange_LagrangeWantsTo"]
[connection signal="OutOfWelcome" from="MenuLagrange" to="." method="_on_MenuLagrange_OutOfWelcome"]
[connection signal="LagrangeWantsTo" from="GameplayLagrange" to="." method="_on_GameplayLangrange_LagrangeWantsTo"]
